# MLE-mentorship

./: .gitignore
.dvc/: config
M2-containerization/: .dockerignore  .gitignore  README.md  entrypoint.sh  requirements.txt  settings.json
M3-experiment-tracking/: README.md  docker-compose.yml  settings.json
M4-pipelines/: .dockerignore  data_loader.py  docker-compose.yml  requirements.txt  settings.json
M5-model-deployment/: LICENSE  README.md  pyproject.toml  requirements.txt  settings.json
M5-model-deployment/config/: settings.json
M5-model-deployment/mlflow/client/: Dockerfile  entrypoint.sh
M5-model-deployment/src/: data_loader.py  test_mlflow_model.py
M5-model-deployment/src/mle_hw5_package/: data_loader.py  preprocess.py  requirements.txt
M5-model-deployment/src/mle_hw5_package/batch_inference/: Dockerfile  docker-compose.yml  run_batch_inference.py
M5-model-deployment/src/mle_hw5_package/config/: settings.json
M5-model-deployment/src/mle_hw5_package/online_inference/: docker-compose.yml
M5-model-deployment/src/mle_hw5_package/online_inference/client/: Dockerfile  example_request_online_inference.py
M5-model-deployment/src/mle_hw5_package/online_inference/server/: Dockerfile  run_online_inference.py
M5-model-deployment/src/mle_hw5_package/train/: train.py
M5-model-deployment/src/train/exp_1/: train.py
M5-model-deployment/src/train/exp_2/: train.py
M5-model-deployment/src/train/exp_3/: train.py
M5-model-deployment/tests/: test_preprocess.py  test_run_batch_inference.py  test_run_online_inference.py
M6-cloud/: Dockerfile  README.md  (+2 more)
(+46 files in other folders)
